<resources>
    <string name="app_name">DoIt</string>
    <string name="vista_previa_de_la_imagen">Vista previa de la imagen</string>
    <string name="elegir_o_tomar_foto">Elegir o Tomar Foto</string>
    <string name="nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="descripci_n">Descripción</string>
    <string name="guardar_ejercicio">Guardar Ejercicio</string>
    <string name="cancelar">Cancelar</string>
    <string name="avatar_de_usuario">Avatar de usuario</string>
    <string name="historial_de_entrenamientos">Historial de Entrenamientos</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_de_la_rutina">Nombre de la rutina</string>
    <string name="descripci_n_ej_brazos_piernas">Descripción (ej. brazos, piernas...)</string>
    <string name="contrase_a">Contraseña</string>
    <string name="logo_doit">Logo DoIt</string>
    <string name="reps">Reps:</string>
    <string name="_0">0</string>
    <string name="peso">Peso:</string>
    <string name="kg">kg</string>
    <string name="tus_datos">Tus Datos</string>
    <string name="datos_del_usuario">Datos del Usuario</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="entrenamiento_express">Entrenamiento express</string>
    <string name="Entrenamiento_express">Entrenamiento Express</string>
    <string name="entrenamiento_personalizado">Entrenamiento Personalizado</string>
    <string name="a_adir_rutina">Añadir rutina</string>
    <string name="agregar_rutina">Agregar rutina</string>
    <string name="historial_de_Entrenamientos">Historial de Entrenamientos</string>
    <string name="volver">Volver</string>
</resources>