<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:layout_marginEnd="4dp" />

    <EditText
        android:id="@+id/inputRepeticiones"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/_0"
        android:backgroundTint="@color/rojo"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="4dp" />

    <EditText
        android:id="@+id/inputPeso"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/kg"
        android:backgroundTint="@color/rojo"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />
</LinearLayout>
