<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- CONTENIDO SCROLLABLE -->
    <ScrollView
        android:id="@+id/scrollRutinas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnHistorial"
        android:padding="24dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/layoutRutinas"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <!-- CENTRADO: tarjeta Añadir rutina -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:id="@+id/cardAgregarRutina"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="12dp"
                    android:clickable="true"
                    android:background="@drawable/card_background"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/imgAdd"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/logo_anadir"
                        android:contentDescription="@string/agregar_rutina" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a_adir_rutina"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Aquí se añadirán dinámicamente las rutinas en filas de 2 -->
        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial_de_Entrenamientos"
        android:textSize="16sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/bottomNav"
        android:backgroundTint="@color/azul_oscuro"
        android:textColor="@android:color/white"
        />


    <!-- Menú de navegación inferior -->
    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#d9272a"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="8dp">

        <ImageView
            android:id="@+id/navInicio"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/casa_menu"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/navPesas"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/pesa_nav"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/navRunning"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/running_nav"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/navPerfil"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/usuario_nav"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/navSalir"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/logout_nav"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>
